--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Frontend Mentor | FAQ accordion</title>
 
     <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
   </head>
   <body>
     <div class="container">
@@ -26,67 +27,75 @@
       <div class="faq">
         <h2>
           What is Frontend Mentor, and how will it help me?<img
+            class="dropdown"
             tabindex="0"
             src="./assets/images/icon-plus.svg"
             alt="plus"
           />
         </h2>
-
-        <p>
-          Frontend Mentor offers realistic coding challenges to help developers
-          improve their frontend coding skills with projects in HTML, CSS, and
-          JavaScript. It's suitable for all levels and ideal for portfolio
-          building.
-        </p>
+        <div class="answer">
+          <p>
+            Frontend Mentor offers realistic coding challenges to help
+            developers improve their frontend coding skills with projects in
+            HTML, CSS, and JavaScript. It's suitable for all levels and ideal
+            for portfolio building.
+          </p>
+        </div>
       </div>
 
       <div class="faq">
         <h2>
           Is Frontend Mentor free?<img
+            class="dropdown"
             tabindex="0"
             src="./assets/images/icon-plus.svg"
             alt="plus"
           />
         </h2>
-
-        <p>
-          Yes, Frontend Mentor offers both free and premium coding challenges,
-          with the free option providing access to a range of projects suitable
-          for all skill levels.
-        </p>
+        <div class="answer">
+          <p>
+            Yes, Frontend Mentor offers both free and premium coding challenges,
+            with the free option providing access to a range of projects
+            suitable for all skill levels.
+          </p>
+        </div>
       </div>
 
       <div class="faq">
         <h2>
           Can I use Frontend Mentor projects in my portfolio?<img
+            class="dropdown"
             tabindex="0"
             src="./assets/images/icon-plus.svg"
             alt="plus"
           />
         </h2>
-
-        <p>
-          Yes, you can use projects completed on Frontend Mentor in your
-          portfolio. It's an excellent way to showcase your skills to potential
-          employers!
-        </p>
+        <div class="answer">
+          <p>
+            Yes, you can use projects completed on Frontend Mentor in your
+            portfolio. It's an excellent way to showcase your skills to
+            potential employers!
+          </p>
+        </div>
       </div>
 
       <div class="faq">
         <h2>
           How can I get help if I'm stuck on a challenge?
           <img
+            class="dropdown"
             tabindex="0"
             src="./assets/images/icon-plus.svg"
             alt="plus"
           />
         </h2>
-
-        <p>
-          The best place to get help is inside Frontend Mentor's Discord
-          community. There's a help channel where you can ask questions and seek
-          support from other community members.
-        </p>
+        <div class="answer">
+          <p>
+            The best place to get help is inside Frontend Mentor's Discord
+            community. There's a help channel where you can ask questions and
+            seek support from other community members.
+          </p>
+        </div>
       </div>
     </div>
   </body>
